k8s/prod/media-services/flaresolverr.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
  namespace: media
spec:
  selector:
    app: flaresolverr
  ports:
  - name: web-ui
    port: 8191
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaresolverr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flaresolverr
  template:
    metadata:
      labels:
        app: flaresolverr
    spec:
      containers:
      - name: flaresolverr
        image: ghcr.io/flaresolverr/flaresolverr:latest
        resources:
          limits:
            cpu: "1"
            memory: "512Mi"
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flaresolverr-route
  namespace: media # Where your application is deployed
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - "flaresolverr.kerrlab.app"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    # Use backendRefs for Gateway API v1beta1
    - name: flaresolverr
      port: 8191
