k8s/prod/media-services/sonarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
spec:
  selector:
    app: sonarr
  ports:
  - name: web-ui
    port: 8989
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarr
  namespace: media
spec:
  serviceName: sonarr
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: lscr.io/linuxserver/sonarr:latest
        volumeMounts:
        - name: downloads-mount
          mountPath: /downloads # Path inside the container
        - name: video-series-mount
          mountPath: /tv # Path inside the container
        - name: video-anime-mount
          mountPath: /anime
        - name: video-movies-mount
          mountPath: /movies
        - name: config
          subPath: sonarr
          mountPath: /config
      volumes:
      - name: downloads-mount
        persistentVolumeClaim:
          claimName: downloads-pvc
      - name: video-movies-mount
        persistentVolumeClaim:
          claimName: video-movies-pvc
      - name: video-series-mount
        persistentVolumeClaim:
          claimName: video-series-pvc
      - name: video-anime-mount
        persistentVolumeClaim:
          claimName: video-anime-pvc
      - name: config
        persistentVolumeClaim:
          claimName: arr-config-pvc
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr-route
  namespace: media # Where your application is deployed
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - "sonarr.kerrlab.app"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    # Use backendRefs for Gateway API v1beta1
    - name: sonarr
      port: 8989
