k8s/prod/media-services/tautulli.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  namespace: media
spec:
  selector:
    app: tautulli
  ports:
  - name: web-ui
    port: 8181
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tautulli
  namespace: media
spec:
  serviceName: tautulli
  replicas: 1
  selector:
    matchLabels:
      app: tautulli
  template:
    metadata:
      labels:
        app: tautulli
    spec:
      containers:
      - name: tautulli
        image: ghcr.io/tautulli/tautulli
        volumeMounts:
        - name: config
          subPath: tautulli
          mountPath: /config
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: arr-config-pvc
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tautulli-route
  namespace: media # Where your application is deployed
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - "tautulli.kerrlab.app"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    # Use backendRefs for Gateway API v1beta1
    - name: tautulli
      port: 8181
